<resources>
    <string name="app_name">Save Your Voicemails</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="home">Home</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="facebook">Facebook</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="exit">Exit</string>
    <string name="record_phone_call">Record Phone Call</string>
    <string name="logger">logger</string>
    <string name="documents">documents</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_no">Contact No</string>
    <string name="sign_up">Sign up</string>
    <string name="waiting">Waiting…</string>
    <string name="loading">Loading…</string>
    <string name="forgot_password">Forgot password</string>
    <string name="live_chat">Live Chat</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="me">Me</string>
    <string name="email">Email</string>
    <string name="recorder">Recorder</string>
    <string name="request_permission_AccessibilityService">Request Accessibility Services Permission</string>

    <string name="voicemails_recorder">SaveYourVoicemails Recorder</string>
    <string name="privacy_policy_url">https://sites.google.com/view/saveyourvoicemailspolicy/home</string>
    <string name="live_chat_url">https://saveyourvoicemailnow.wixsite.com/savevoicemails</string>
    <string name="live_contact_us">https://saveyourvoicemailnow.wixsite.com/savevoicemails/contact-us</string>
    <string name="key_voicemails_version">Voicemails: %1$s</string>

    <!-- TODO: user case -->
    <string name="key_see_video">key_see_video</string>
    <string name="see_video">Click "Now" to watch a short video that will show you how to save your voicemails. After watching the video, if you still need help, please click "Live Chat" to chat with a live person.</string>
    <string name="price_3_99">Price: $9.89</string>
    <string name="video_guide">Video guide</string>
    <string name="key_user">key_user</string>
    <string name="key_request_code">key_request_code</string>
    <string name="key_mail365">key_mail365</string>
    <string name="key_session_token">key_session_token</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="later">Later</string>
    <string name="now">Now</string>
    <string name="how_to">How To</string>
    <string name="change">Change</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="saved_voice_mails">Voicemail Saved!</string>
    <string name="saved_voice_mails_successfully">Voicemail Saved Successfully!</string>
    <string name="please_turn_on_service">Please turn on ACCESSIBILITY SERVICE to use recording on Android 10 and later</string>
    <string name="please_turn_on_recording">If you do not have Visual Voicemail and you have to dial in to hear your voicemails, then turn on "Automatically Record Voice" within the Save Your Voicemails app\'s Settings (gear icon on bottom right). This feature will record your voicemail when you call in to play them and automatically gives you the ability to share them to the Save Your Voicemails app. Remember to turn this off after saving your voicemails; otherwise, all of your calls will be recorded.</string>
    <string name="alert">Alert</string>
    <string name="find_enable_Voicemails">If you do not have visual voicemail and you have to call in to hear your voicemails, then you must go to Accessibility Services on your phone\'s "Settings" and click "Installed Services or Installed Apps," then turn on the "SaveYourVoicemails Recorder." You may also watch a short video that explains this Accessibility feature by clicking "Me" (at the bottom of the screen) and then clicking "Watch Tutorial Video
Noted: WE DO NOT COLLECT ANY DATA WHILE YOU USE ACCESSIBILITY. ACCESSIBILITY ALLOWS YOU TO RECORD YOUR VOICEMAILS USING OUR RECORDER AND THAT'S ALL.</string>
    <string name="description_subscription">Save Your Voicemails charges a yearly subscription fee of $9.89 for unlimited use. Your free trial is over. Press subscribe to continue saving Voicemails. It\'s well worth it.</string>
    <string name="accessibilityServices">Accessibility services are used for the Save Your Voicemails recorder function in case your phone is not equipped with Visual Voicemail.  The  Recorder function will help you record your voicemails so that you can forward your voicemails to the Save Your Voicemails app. You have the option  of turning off the voice recorder by simply going to the Save Your Voicemails app\'s settings and turning off  "Automatically record voice."</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="subscribe">Subscribe</string>
    <string name="uploading">Uploading…</string>
    <string name="delete">Delete</string>
    <string name="no_connections">No Internet connection. Please check your network</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="exporting">Exporting…</string>
    <string name="are_you_sure_you_want_delete_item">Are you sure want to delete this voice mail</string>
    <string name="key_sent_downloaded_app">key_sent_downloaded_app</string>
    <string name="key_sent_subscribed_app">key_sent_subscribed_app</string>
    <string name="key_subscription">key_subscription</string>
    <string name="key_already_asked_recording">key_already_asked_recording</string>
    <string name="key_account">Account</string>
    <string name="key_upgrade">Upgrade</string>
    <string name="key_general">General</string>
    <string name="key_automatically_recorder_voice">Automatically record voice</string>
    <string name="key_detail_automatically_recorder_voice">Allow record visual voicemails and phone calls</string>
    <string name="key_permission">Permission</string>
    <string name="key_version">Version</string>
    <string name="key_detail_permission">The following permissions have been granted</string>
    <string name="key_subscription_one_year">co.tpcreative.saveyourvoicemails.app.yearly</string>
    <string name="no_voicemails">No Voicemails</string>
    <string name="microphone_access_for_audio_recording">Microphone access for audio recording</string>
    <string name="turn_on_recorder_app_connector_to_record_calls_on_android_10">Turn on Voicemails Recorder app to record calls on Android 10 and later</string>
    <string name="grant_permissions">Granted Permissions</string>
    <string name="external_access_to_save_recording_to_mp3_files">External access to save recording to mp3 files</string>
    <string name="manage_phone_calls_to_record_incoming_and_outgoing_calls">Manage phone calls to record incoming and outgoing calls</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="facebook_app_id">142773181347562</string>
    <string name="fb_login_protocol_scheme">fb142773181347562</string>

    <!--Email Token -->

    <string name="key_refresh_token">refresh_token</string>
    <string name="key_access_token">access_token</string>
    <string name="key_client_id">client_id</string>
    <string name="key_redirect_uri">redirect_uri</string>
    <string name="key_grant_type">grant_type</string>
    <string name="url_graph_microsoft">https://graph.microsoft.com/</string>
    <string name="search">Search</string>
    <string name="signed_in_with">Signed In With:</string>
    <string name="contact_us">Contact US</string>
    <string name="watch_tutorial_video">Watch Tutorial Video</string>
    <string name="accessibility_services">Accessibility Services</string>
</resources>