<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/key_general"
        android:layout="@layout/preference_category_layout">
        <co.tpcreative.saveyourvoicemails.common.preference.MySwitchPreference
            android:layout="@layout/custom_preferences_item"
            android:icon="@drawable/ic_baseline_voicemail_24"
            android:summary="@string/key_detail_automatically_recorder_voice"
            android:key="@string/key_automatically_recorder_voice"
            android:title="@string/key_automatically_recorder_voice"/>

        <co.tpcreative.saveyourvoicemails.common.preference.MyPreference
            android:layout="@layout/custom_preferences_item"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:summary="@string/key_detail_permission"
            android:key="@string/key_permission"
            android:title="@string/key_permission"/>

        <co.tpcreative.saveyourvoicemails.common.preference.MyPreference
            android:layout="@layout/custom_preferences_item"
            android:icon="@drawable/ic_baseline_margin_24"
            android:key="@string/key_version"
            android:title="@string/key_version"/>

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>