<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.me.MeFragment">
    <RelativeLayout
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/bg_user_info_group"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/llUserInfo"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/text_size_13"
                android:text="@string/signed_in_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/text_size_13"
                android:text="@string/facebook"
                android:layout_marginStart="10dp"
                android:textColor="@color/green_500"
                android:id="@+id/tvUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_below="@+id/llUserInfo"
            android:layout_marginTop="20dp"
            android:id="@+id/btnChangePassword"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnChangePassword"
            android:id="@+id/btnLiveChat"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/live_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnLiveChat"
            android:id="@+id/btnSignOut"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>