<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/sign_in_gradient_drawable"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.view.SignUpAct">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/edtContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_no">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/bg_button_rounded"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>