<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_record"
                    android:id="@+id/imgRecording"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/record"
                    android:layout_below="@+id/imgRecording"
                    android:id="@+id/tvRecording"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_record"
                    android:id="@+id/imgStop"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/stop"
                    android:layout_below="@+id/imgStop"
                    android:id="@+id/tvStop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    app:tint="@color/teal_700"
                    app:srcCompat="@drawable/ic_record"
                    android:id="@+id/imgHome"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/home"
                    android:layout_below="@+id/imgHome"
                    android:id="@+id/tvHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>